# stm32f4-discovery-rs

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: main.rs
